# [package]
# name = "tutorial"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# add some cargo projects.
[workspace]
members = [
    "basic_concept",
    "tokio_sample_1",
    "grpc_rust",
    "rust_quiz",
    "tokio_stream",
    "tokio_redis_mini",
    "tokio_channel",
    "tokio_multi_listener",
    "websocket",
    "poem_tutorial",
    "tls_ja3",
]
