[package]
name = "poem_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tokio = { version = "1.*", features = ["full"] }
poem = { version = "1.*" }
