[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.*", features = ["full"] }
tungstenite = "0.14.0"
tokio-tungstenite = "*"
log = "0.4.17"
env_logger = "0.10.0"
futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
futures-channel = "0.3.28"
url = "2.3.1"
